@@ -16,7 +16,7 @@ esac
 
 $MAKE_CMD clean
 $MAKE_CMD hw || exit 1
-$MAKE_CMD clean
+$MAKE_CMD localclean
 $MAKE_CMD glhw || exit 1
 $MAKE_CMD clean
 
